log
Wed 10 May 2023 06:57:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
eeff082
Wed 10 May 2023 06:57:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
25421a9
Wed 10 May 2023 06:59:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
4a1787c
Wed 10 May 2023 07:00:52 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:9: error: unused variable ‘array’ [-Werror=unused-variable]
   37 |   Heap *array = (Heap*)malloc(sizeof(heapElem));
      |         ^~~~~
heap.c:36:9: error: unused variable ‘mont’ [-Werror=unused-variable]
   36 |   Heap *mont = (Heap*)malloc(sizeof(Heap));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
bd01859
Thu 11 May 2023 12:00:44 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:17: error: initialization of ‘Heap *’ {aka ‘struct Heap *’} from incompatible pointer type ‘heapElem *’ {aka ‘struct nodo *’} [-Werror=incompatible-pointer-types]
   37 |   Heap *array = (heapElem*)malloc(sizeof(heapElem));
      |                 ^
heap.c:37:9: error: unused variable ‘array’ [-Werror=unused-variable]
   37 |   Heap *array = (heapElem*)malloc(sizeof(heapElem));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
02d2d02
Thu 11 May 2023 12:01:29 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
6713a78
Thu 11 May 2023 12:01:43 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
79aa705
